Refactor: Remove unused authentication and chronic services, update claim service structure, and enhance notification handling
- Deleted unused files: auth.serializer.ts, auth.service.ts, chronic.service.ts, claim.service.ts, member.service.ts, notification.service.ts, settings.service.ts, auth.ts, base.ts, index.ts, auth.ts, pagination.ts, response.ts.
- Refactored claim service to streamline data handling and improve type definitions.
- Enhanced notification service to include detailed notification types and improved read handling.
- Updated AuthContext to handle CSRF token refresh errors gracefully.
- Adjusted TypeScript configurations to allow unused locals and parameters for development flexibility.
- Improved project documentation and review summary for clarity and completeness.
- Added production environment configuration for backend services in .env.prod.
- Updated Docker Compose to include frontend service with environment variables for backend URL.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   db:
@@ -26,6 +26,16 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/sgss_medical_fund
     depends_on:
       - db
+
+  frontend:
+    build: ./Frontend
+    ports:
+      - "5000:5000"
+    environment:
+      - BACKEND_URL=http://backend:8000
+      - NODE_ENV=production
+    depends_on:
+      - backend
 
 volumes:
   postgres_data:
