--- a/Backend/.env
+++ b/Backend/.env
@@ -17,11 +17,11 @@ TIME_ZONE=Africa/Nairobi
 
 # Email Configuration - Mailtrap (Testing)
 
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=2525
+EMAIL_HOST='sandbox.smtp.mailtrap.io'
+EMAIL_PORT='2525'
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=f36667580aee98
-EMAIL_HOST_PASSWORD=85e8cdba923ab1
-DEFAULT_FROM_EMAIL=noreply@ajnetworkskenya.it.com
+EMAIL_HOST_USER='74bd29e1011892'
+EMAIL_HOST_PASSWORD='5bc8028df425df'
+DEFAULT_FROM_EMAIL='noreply@ajnetworkskenya.it.com'
 # 🧠 Misc (future extensions)
 ENVIRONMENT=development
