--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -17,16 +17,16 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
     "baseUrl": "./",
-		"paths": {
-			"~/*": ["src/*"]
-		}
+    "paths": {
+      "~/*": ["src/*"]
+    }
   },
   "include": ["src"]
 }
